--- a/style.css
+++ b/style.css
@@ -10,3 +10,18 @@ h1{
 section{
     display: flex;
 }
+.first-part{
+    width: 50%;
+    padding: 5%;
+}
+.first-part img{
+    width: 80%;
+}
+.first-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-weight: 400;
+    color: white;
+}
