--- a/style.css
+++ b/style.css
@@ -36,3 +36,12 @@ section{
     width: 40%;
     margin-left: 30%;
     margin-top: 10%;
+
+.footer div
+{
+    padding-bottom: 50px;
+}
+.footer h1
+{
+padding-top:20px
+}
