--- a/style.css
+++ b/style.css
@@ -36,12 +36,16 @@ section{
     width: 40%;
     margin-left: 30%;
     margin-top: 10%;
-
-.footer div
-{
-    padding-bottom: 50px;
 }
-.footer h1
-{
-padding-top:20px
+footer{
+    background: #0b0d17;
+} 
+footer h3{
+    color: #5b5b5b;
+}
+footer span{
+    color: #fba24f;
+} 
+footer p{
+    color: #ffffff;
 }
